# TCC-EVM

./: CMakeLists.txt  Makefile  cmake_install.cmake
server/: measurement.db  server.py
server/templates/: index.html
src/: CMakeCache.txt  CMakeLists.txt  Database.cpp  Database.hpp  DetectionPostProcess.cpp  DetectionPostProcess.hpp  FaceDetection.cpp  FaceDetection.hpp  ImageFFT.cpp  ImageFFT.hpp  Makefile  ModelLoader.cpp  ModelLoader.hpp  SignalProcessor.cpp  SignalProcessor.hpp  cmake_install.cmake  database.cpp  database.hpp  demo.cpp  demo_dlib.cpp  demo_video_torch.cpp  evm.cpp  evm.hpp  evmBlur.cpp  evmBlur.hpp
src/data/: calibrate_spo2.py  calibrate_spo2_notebook.py  data_plot.py  data_plot_2.py  spo2_plot.py
src/src/: Makefile  cmake_install.cmake
